fix: linkedin alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3145,4 +3145,11 @@ h1 {
   }
 }
 
+.icon.brands:before {
+  font-size: 1.5rem;
+}
+.icon.brands:not(:last-child) {
+  margin-right: 0.75rem;
+}
+
 /*# sourceMappingURL=main.css.map */
